--- a/package.json
+++ b/package.json
@@ -2,18 +2,14 @@
   "name": "videosdk-react",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://lab.zujonow.com/react-rtc-demo/",
+  "homepage": "https://lab.zujonow.com/react-custom-template-demo/",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.3",
-    "@testing-library/user-event": "^13.5.0",
-    "@videosdk.live/react-sdk": "^0.1.31",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-lottie": "^1.2.3",
-    "react-player": "^2.10.0",
-    "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.4"
+    "@videosdk.live/react-sdk": "^0.1.70",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-player": "^2.12.0",
+    "react-scripts": "5.0.1",
+    "web-vitals": "^3.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
